# 4.2-lcd-300x400-spi-st7305

./: .gitignore  LICENSE  README.md  README_EN.md
examples/esp32s3-4.2-tft-300x400-spi-st7305-bringup/: CMakeLists.txt  sdkconfig
examples/esp32s3-4.2-tft-300x400-spi-st7305-bringup/main/: CMakeLists.txt  board_config.h  board_lcd.c  board_lcd.h  board_lcd_demo.c  board_lcd_demo.h  board_touch.c  board_touch.h  board_touch_demo.c  board_touch_priv.h  board_ui_draw.c  board_ui_draw.h  main.c
examples/esp32s3-4.2-tft-300x400-spi-st7305-bringup/main/ft3269_touch/: ft3269_touch.c  ft3269_touch.h
examples/esp32s3-4.2-tft-300x400-spi-st7305-bringup/main/st7305_lcd/: st7305_lcd.c  st7305_lcd.h
